--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ background-color: #00b3e6;
 div {
 width: 700px;
 margin: auto;
+front-family: "Helvetica Nue";
 background: white;
 padding: 30px;
 }
